get all ads & property requests for loggedin user with filters
