# src/controllers/propertyRequests.controller.mjs
@@ -1,8 +1,9 @@
 import { BadRequestError, NotFoundError } from "../shared/app-error.mjs";
 import PropertyRequestsService from "../services/propertyRequests.service.mjs";
 import MESSAGES from "../shared/messages.mjs";
-import { validateObjectId } from "../utils/helpers.mjs";
+import { handlePaginationSort, validateObjectId } from "../utils/helpers.mjs";
 import { HTTP_CODES } from "../shared/status-codes.mjs";
+import { PropertyType } from "../shared/enums.mjs";
 
 export default class PropertyRequestsController {
   // Function to create a new propertyRequest
@@ -15,12 +16,51 @@ export default class PropertyRequestsController {
     }
 
     req.body.userId = req.user._id;
-    let propertyRequest = await PropertyRequestsService.createOne(
-      req.body
-    );
+    let propertyRequest = await PropertyRequestsService.createOne(req.body);
 
     res.status(HTTP_CODES.SUCCESS.CREATED).send({
       data: propertyRequest,
+    });
+  }
+
+  static async getAll(req, res) {
+    const { skip, limit, sort } = handlePaginationSort(req.query);
+    const options = {
+      skip,
+      limit,
+      sort,
+    };
+
+    const { propertyType, minPrice, maxPrice, area, city, district } =
+      req.query;
+    const filters = { userId: req.user._id };
+    if (propertyType) {
+      if(!Object.values(PropertyType).includes(propertyType)) {
+        throw new BadRequestError(MESSAGES.INVALID_PROPERTY_TYPE);
+      }
+      filters.propertyType = propertyType;
+    }
+    if (minPrice)
+      filters.price = { ...filters.price, $gte: parseFloat(minPrice) };
+    if (maxPrice)
+      filters.price = { ...filters.price, $lte: parseFloat(maxPrice) };
+    if (area) filters.area = area;
+    if (city) filters.city = city;
+    if (district) filters.district = district;
+
+    const propertyRequests = await PropertyRequestsService.getAll(
+      filters,
+      "-userId -createdAt -updatedAt -__v",
+      options
+    );
+    const count = await PropertyRequestsService.count(filters);
+
+    res.send({
+      data: {
+        rows: propertyRequests,
+        count,
+      },
+      error: null,
     });
   }
 
@@ -39,15 +79,18 @@ export default class PropertyRequestsController {
       throw new BadRequestError(error.details[0].message);
     }
 
-    const propertyRequest =
-      await PropertyRequestsService.getOneById(id, ["_id"]);
+    const propertyRequest = await PropertyRequestsService.getOneById(id, [
+      "_id",
+    ]);
     if (!propertyRequest) {
       throw new NotFoundError(MESSAGES.PROPERTY_REQUEST_NOT_FOUND);
     }
 
     req.body.refreshedAt = new Date();
-    let updatedPropertyRequest =
-      await PropertyRequestsService.updateOne({ _id: id }, req.body);
+    let updatedPropertyRequest = await PropertyRequestsService.updateOne(
+      { _id: id },
+      req.body
+    );
 
     res.send({ data: updatedPropertyRequest });
   }
